# Fast_service

./: .coverage  .gitignore  README.md  alembic.ini  main.py  pyproject.toml
.github/workflows/: deploy.yml
front/: header.py
front/header/: header.py
migrations/: env.py
migrations/versions/: 2024_03_14_1433-3722e79049fb_added_users_table.py  2024_03_14_1732-53937fceb381_changed_user_refresh_token_to_nullable.py  2024_03_17_1708-d1c5aa9b4ecc_made_user_email_unique.py  2024_03_26-6040e6a7be5b_added_work_and_supply_tables.py  2024_03_26-e4ca7f85e87c_added_work_supply.py  2024_03_27-71671dbc53c0_added_master.py  2024_03_28-0f2b136116fd_added_timezone.py  2024_03_28-c717f3475dc3_added_master_to_order_table.py  2024_03_28-db5c44566279_added_user.py
src/: __init__.py  config.py  database.py  dependencies.py  repository.py  service.py  uow.py
src/auth/: __init__.py  config.py  dependencies.py  models.py  router.py  schemas.py  service.py  user_rep.py  utils.py
src/errors/: __init__.py  excaptions.py  handlers.py
src/masters/: models.py  repository.py  router.py  schemas.py  service.py
src/orders/: models.py  repository.py  router.py  schemas.py  service.py
src/works/: models.py  repositories.py  router.py  schemas.py  service.py
tests/: conftest.py
tests/auth/: conftest.py  test_auth_service.py  test_jwt_generation.py  test_password_hashing.py  test_user_rep.py
tests/e2e/: test_auth.py
