[tool.poetry]
name = "fast-service"
version = "0.1.0"
description = ""
authors = ["ilya-4real <ilya.chernishyov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
sqlalchemy = "^2.0.28"
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"
psycopg-binary = "^3.1.18"
pydantic = {extras = ["email"], version = "^2.6.4"}
python-multipart = "^0.0.9"
bcrypt = "^4.1.2"
pyjwt = {extras = ["crypto"], version = "^2.8.0"}
asyncpg = "^0.29.0"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.28.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
faker = "^24.3.0"
pytest-dotenv = "^0.5.2"
httpx = "^0.27.0"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
pythonpath =["."]
asyncio_mode="auto"
testpaths = ["tests"]
env_override_existing_values=1
env_files = ["src/.test.env"]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
